/*
   Copyright (c) 2019 AT&T Intellectual Property.
   Copyright (c) 2019 Nokia.

   Licensed under the Creative Commons Attribution 4.0 International
   Public License (the "License"); you may not use this file except
   in compliance with the License. You may obtain a copy of the License at

       https://creativecommons.org/licenses/by/4.0/

   Unless required by applicable law or agreed to in writing, documentation
   distributed under the License is distributed on an "AS IS" BASIS,
   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
   See the License for the specific language governing permissions and
   limitations under the License.
*/

syntax = "proto3";

package streaming_protobufs;

option go_package = "gerrit.o-ran-sc.org/r/ric-plt/streaming-protobufs";

import "google/protobuf/wrappers.proto";

/*
   Protocol Buffer definition for SECONDARY RAT DATA USAGE REPORT message.
   (3GPP 36.423, ver 15.4.0)

   Naming convention follows the ASN.1 field naming defined in chapter
   '9.3 Message and Information Element Abstract Syntax (with ASN.1)' of below document:
   http://www.3gpp.org/ftp//Specs/archive/36_series/36.423/36423-f40.zip

   Dashes converted to underscores to make protobuf message syntax correct.
*/

message SecondaryRATDataUsageReport
{
    SecondaryRATDataUsageReport_IEs protocolIEs = 1;
}

message SecondaryRATDataUsageReport_IEs
{
    uint32 id_MeNB_UE_X2AP_ID = 1;
    uint32 id_SgNB_UE_X2AP_ID = 2;
    SecondaryRATUsageReportList id_SecondaryRATUsageReportList = 3;
    google.protobuf.UInt32Value id_MeNB_UE_X2AP_ID_Extension = 4;
}

message SecondaryRATUsageReportList
{
    repeated SecondaryRATUsageReport_ItemIEs items = 1;
}

message SecondaryRATUsageReport_ItemIEs
{
    SecondaryRATUsageReport_Item id_SecondaryRATUsageReport_Item = 1;
}

message SecondaryRATUsageReport_Item
{
    enum SecondaryRATType {
        protobuf_unspecified = 0;
        nr = 1;
    }
    uint32 e_RAB_ID = 1;
    SecondaryRATType secondaryRATType = 2;
    E_RABUsageReportList e_RABUsageReportList = 3;
}

message E_RABUsageReportList
{
    repeated E_RABUsageReport_ItemIEs items = 1;
}

message E_RABUsageReport_ItemIEs
{
    E_RABUsageReport_Item id_E_RABUsageReport_Item = 1;
}

message E_RABUsageReport_Item
{
    uint64 startTimeStamp = 1;
    uint64 endTimeStamp = 2;
    uint64 usageCountUL = 3;
    uint64 usageCountDL = 4;
}
